@@ -27,7 +27,6 @@ To Do:
 - fix: preferences font changes does not propagate to chart objects
 - add remember last file used for CSV plugin.
 
-
     
 
 Maybe some day:
